<resources>
    <string name="app_name">FastCampus</string>

    <!-- ch00. 메인   -->
    <string name="count_number">숫자 세기</string>
    <string name="unit_conversion">단위 변환기</string>
    <string name="emergency_medical">응급 의료 정보</string>
    <string name="calculator">계산기</string>
    <string name="stop_watch">스톱 워치</string>
    <string name="word_book">단어장</string>
    <string name="my_gallery">나만의 갤러리</string>
    <string name="music_player">음악 플레이어</string>
    <string name="web_toon">웹툰</string>
    <string name="recorder">녹음</string>
    <string name="today_notice">오늘의 공지</string>
    <string name="github_repository">깃헙 레파지토리</string>
    <string name="news">뉴스</string>
    <string name="chat">채팅</string>
    <string name="weather">날씨</string>
    <string name="map">맛집도</string>
    <string name="genri">젠리</string>
    <string name="tomorrow_house">내일의 집</string>
    <string name="star_bux">스타벅스</string>
    <string name="youtube">유튜브</string>
    <string name="face_recognition">얼굴 인식</string>
    <string name="finance">금융 서비스</string>
    <string name="wallet">월렛</string>
    <string name="part_1_title">Part 1. 안드로이드 기본</string>
    <string name="part_2_title">Part 2. 안드로이드 중급</string>
    <string name="part_3_title">Part 3. 안드로이드 심화</string>

    <!-- ch01. 숫자 세기    -->
    <string name="init">초기화</string>
    <string name="add_operator">+</string>
    <string name="zero">0</string>

    <!-- ch02. 단위 변환    -->
    <string name="hint_number">자연수를 입력해주세요.</string>
    <string name="mm">mm</string>
    <string name="cm">cm</string>
    <string name="m">m</string>
    <string name="km">km</string>
    <string name="arrow_left_to_right">→</string>
    <string name="output_unit">결과 : %0.8f</string>

    <!-- ch03. 응급 의료 정보    -->
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    <string name="blood_type">혈액형</string>
    <string name="phone_number">연락처</string>
    <string name="etc">주의사항</string>
    <string name="inputButton">건강정보입력버튼</string>
    <string name="deleteButton">건강정보삭제버튼</string>
    <string name="calendarButton">달력버튼</string>
    <string name="rhPlus">rh+</string>
    <string name="rhMinus">rh-</string>
    <string name="hintPhone">010-xxxx-xxxx</string>
    <string name="exposure">노출여부</string>
    <string name="save">저장</string>

    <!-- ch04. 계산기    -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="minus">-</string>
    <string name="delete">←</string>
    <string name="mod">%</string>
    <string name="divide">/</string>
    <string name="mul">*</string>
    <string name="equation">equation</string>
    <string name="result">result</string>
    <string name="msg_no_divide_zero">0으로 나눌 수 없습니다.</string>
    <string name="msg_number_input_need">먼저 숫자를 입력 해주세요.</string>
    <string name="msg_only_one_operator">1개의 연산자만 가능합니다.</string>
    <string name="msg_expression_error">수식이 잘못되었습니다.</string>

    <!-- ch05. 스톱 와치    -->
    <string name="lap">랩</string>
    <string name="stop">정지</string>
    <string name="pause">일시정지</string>
    <string name="start">시작</string>
    <string name="zero_time">00:00</string>
    <string name="twoZero">00</string>
    <string name="second">초</string>
    <string name="countDown">카운트 다운</string>

    <!-- ch06. 단어장    -->
    <string name="edit">수정</string>
    <string name="add_word">단어 추가</string>
    <string name="word">단어</string>
    <string name="mean">뜻</string>
    <string name="add_text">추가</string>
    <string name="msg_delete_word_done">삭제가 완료되었습니다.</string>
    <string name="msg_clicked_word">%s 단어가 클릭되었습니다.</string>

    <!-- ch07. 나만의 갤러리   -->
    <string name="msg_permission_for_read_image">이미지를 가져오기 위해서 외부 저장소 읽기 권한이 필요합니다.</string>
    <string name="msg_load_image">이미지 가져오기를 실행합니다.</string>
    <string name="msg_no_selected_image">선택된 이미지가 없습니다.</string>
    <string name="load_image">이미지 가져오기</string>
    <string name="load_more_image">사진 더 불러오기</string>
    <string name="make_my_album">나만의 앨범 만들기</string>
    <string name="my_album">나만의 앨범</string>
    <string name="add_add">추가하기</string>

    <!-- ch09. 웹툰    -->
    <string name="change_tab_name">탭 이름 바꾸기</string>
    <string name="back_to_last">마지막 시점으로 돌아가기</string>

    <!-- ch10. 녹음    -->
    <string name="zero_time_2">00:00:00</string>
    <string name="recordButton">녹음 버튼</string>
    <string name="playButton">재생 버튼</string>

    <!-- ch11. 오늘의 공지    -->
    <string name="serverHost">ServerHost</string>
    <string name="msg_network_error">Network Failed</string>

    <!-- ch12. 깃헙 레파지토리    -->
    <string name="connect">접속하기</string>
    <string name="star_count">starCount</string>
    <string name="fork">fork</string>
    <string name="msg_repo_more">Repo를 더 조회합니다</string>

    <!-- ch13. 뉴스    -->
    <string name="news_thumbnail">뉴스 썸네일</string>
    <string name="politics">정치</string>
    <string name="sports">스포츠</string>
    <string name="it">정보기술</string>
    <string name="economy">경제</string>
    <string name="social">사회</string>
    <string name="feed">피드</string>

    <!-- ch14. 채팅    -->
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="msg_email_password_input_error">이메일 또는 패스워드가 입력되지 않았습니다</string>
    <string name="msg_name_input_error">이름이 입력되지 않았습니다</string>
    <string name="msg_success_sign_up">회원가입에 성공했습니다.</string>
    <string name="msg_failed_sign_up">회원가입에 실패했습니다.</string>
    <string name="msg_success_sign_in">로그인에 성공했습니다.</string>
    <string name="msg_failed_sign_in">로그인에 실패했습니다.</string>
    <string name="profile">프로필</string>
    <string name="user_list">유저 목록</string>
    <string name="my_page">나의 페이지</string>
    <string name="chat_list">채팅 목록</string>
    <string name="apply">적용하기</string>
    <string name="sign_out">로그아웃</string>
    <string name="description">description</string>
    <string name="user_name">user name</string>
    <string name="send">전송</string>
    <string name="msg_input">메시지를 입력하세요</string>

    <!-- ch15. 날씨    -->
    <string name="temperature_text">%.1f°</string>
    <string name="precipitation_text">강수확률 : %d %%</string>

    <!-- ch16. 대동맛집도    -->

    <!-- ch17. 젠리    -->
    <string name="kakao_login">카카오톡 로그인</string>

    <!-- ch18. 내일의집    -->
    <string name="my_info">내정보</string>
    <string name="home">홈</string>
    <string name="upload">업로드</string>
    <string name="photo">사진</string>
    <string name="article_thumbnail">기사 썸네일</string>
    <string name="hint_board">게시글 검색</string>
    <string name="bookmark">bookmark</string>

    <!-- ch19. 스타벅스    -->
    <string name="order">주문</string>
    <string name="app_bar_image">앱바 이미지</string>
    <string name="msg_coffee_recommend">%s님, \n오늘도 커피 한잔 드실?</string>
    <string name="what_news">what news</string>
    <string name="coupon">Coupon</string>
    <string name="star_of_star">%d/%d★</string>
    <string name="msg_recommend_menu">%s님을 위한 추천 %s 메뉴</string>
    <string name="menu_picture">메뉴사진</string>
    <string name="delivery">DELIVERY</string>

    <string name="sub_title_video_info">%s · 조회수 %s · %s</string>
    <string name="header_sub_title_video_info">조회수 %s · %s</string>

    <!-- ch20. 얼굴인식 -->


    <!-- ch21. 금융서비스 -->
    <string name="msg_simple_password_input">간편 비밀번호 6자리 입력해주세요</string>
    <string name="input_done">입력완료</string>
    <string name="secure_keypad">보안 키패드</string>
    <string name="phone_verify">휴대폰 인증</string>
    <string name="msg_identify_info">본인 확인을 위해 정보를 입력해주세요.</string>
    <string name="done_input">입력 완료</string>
    <string name="hint_phone_number">휴대폰 번호</string>
    <string name="telecom">통신사</string>
    <string name="skt">SKT</string>
    <string name="kt">KT</string>
    <string name="lg">LG</string>
    <string name="cheap_skt">SKT 알뜰폰</string>
    <string name="cheap_kt">KT 알뜰폰</string>
    <string name="cheap_lg">LG 알뜰폰</string>
    <string name="gender">성별</string>
    <string name="female">여자</string>
    <string name="male">남자</string>
    <string name="hint_birth">생년월일</string>
    <string name="hint_name">이름</string>
    <string name="msg_choice_word_or_chip">단어 또는 칩을 선택해주세요.</string>

</resources>