<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".part1.ch01_count_number.CountNumberActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/border_color_on_primary"
        android:gravity="center_horizontal"
        android:text="@string/count_number"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="70dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countTextView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="120sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetButton"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_primary_r10"
        android:padding="16dp"
        android:text="@string/init"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rectangle_primary_r10"
        android:padding="16dp"
        android:text="@string/add_operator"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resetButton"
        app:layout_constraintTop_toBottomOf="@id/countTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>