<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ch10_recorder.RecorderActivity">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/zero_time_2"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.fastcampus.ch10_recorder.WaveFormView
        android:id="@+id/waveFormView"
        android:background="#B7ABAB"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/recordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/recordButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/recordButton"
        android:src="@drawable/baseline_fiber_manual_record_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/stopButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/playButton"
        android:src="@drawable/baseline_stop_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recordButton"
        app:tint="@color/grey" />

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/playButton"
        android:src="@drawable/baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/grey" />


</androidx.constraintlayout.widget.ConstraintLayout>